	PR target/55224 	* config/i386/i386.c (ix86_function_ok_for_sibcall): Put back exception 	to make a sibcall if one of the functions has void return type.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@193306 138bc75d-0d04-0410-961f-82ee72b054a4